force-app/main/default/objects/History_Tracker__mdt/History_Tracker__mdt.object-meta.xml
<CustomObject>
    <description>Field History And Usage Tracker Configuration</description>
    <label>History Tracker</label>
    <pluralLabel>History Tracker</pluralLabel>
</CustomObject>