force-app/main/default/objects/History_Tracker__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <inlineHelpText>Api Name of fields</inlineHelpText>
    <label>Fields</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>