force-app/main/default/objects/History_Tracker__mdt/fields/Track_Fields__c.field-meta.xml
<CustomField>
    <fullName>Track_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Fields</label>
    <type>Checkbox</type>
</CustomField>