force-app/main/default/objects/History_Tracker__mdt/fields/Track_Usage__c.field-meta.xml
<CustomField>
    <fullName>Track_Usage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Usage</label>
    <type>Checkbox</type>
</CustomField>