force-app/main/default/objects/History_Tracker__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>Track_Fields__c</columns>
    <columns>Track_Usage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>